#6 fix swapped poms